dbeaver/pro#7224 Fix the remaining zip slip